--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,60 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: "IRANSans-Light";
+  src: url(./../public/fonts/IRANSansX-Light.woff2);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@font-face {
+  font-family: "IRANSans-Regular";
+  src: url(./../public/fonts/IRANSansX-Regular.woff2);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: "IRANSans-Medium";
+  src: url(./../public/fonts/IRANSansX-Medium.woff2);
 }
 
+@font-face {
+  font-family: "IRANSans-Bold";
+  src: url(./../public/fonts/IRANSansX-Bold.woff2);
+}
+
+@theme {
+  --color-primary: #02bad4;
+  --color-gray: #707070;
+  --color-light-teal: #02bad4;
+  --color-dark: #3a3a3a;
+
+
+  
+  --font-IRANSans-Light: "IRANSans-Light";
+  --font-IRANSans-Regular: "IRANSans-Regular";
+  --font-IRANSans-Medium: "IRANSans-Medium";
+  --font-IRANSans-Bold: "IRANSans-Bold";
+}
+
+html,
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-IRANSans-Regular);
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: --color-gray;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: inset 0 0 20px 20px #ffffff;
 }
